--- a/SB_10_Networking/Base.lproj/Main.storyboard
+++ b/SB_10_Networking/Base.lproj/Main.storyboard
@@ -38,16 +38,20 @@
             </objects>
             <point key="canvasLocation" x="2846.1538461538462" y="336.96682464454977"/>
         </scene>
-        <!--View Controller-->
+        <!--Image View Controller-->
         <scene sceneID="lwr-WG-JTe">
             <objects>
-                <viewController id="5yz-RC-7iO" sceneMemberID="viewController">
+                <viewController id="5yz-RC-7iO" customClass="ImageViewController" customModule="SB_10_Networking" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="LJQ-Sw-BD4">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="Dlw-dZ-0Ey">
-                                <rect key="frame" x="160" y="392" width="71" height="61"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5sM-o0-cOg">
+                                <rect key="frame" x="-10" y="91" width="406" height="753"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="dML-9k-Gkp">
+                                <rect key="frame" x="185" y="457" width="20" height="20"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </activityIndicatorView>
                         </subviews>
@@ -55,6 +59,10 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                     <navigationItem key="navigationItem" id="Bjx-7k-phE"/>
+                    <connections>
+                        <outlet property="activityIndicator" destination="dML-9k-Gkp" id="vk4-Hg-G01"/>
+                        <outlet property="imageView" destination="5sM-o0-cOg" id="PO1-wF-igh"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hes-LS-tD9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
